basic fixes to the footer spacing, resized some images, try to make content load faster, and make responsiveness work better

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: "Helvetica Neue LT Std - Bd Cn", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -19,3 +19,5 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$primary: $blue;
